<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMyads"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#fefefe"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/ivAds"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_gravity="center"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:scaleType="fitXY"
         />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tvNameAds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:text="@string/ads_title"
            android:textStyle="bold"
            android:textColor="#222222"
            android:textSize="15dip" />

        <TextView
            android:id="@+id/tvContentAds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/ads_content"
            android:textColor="#5d5d5d"
            android:textSize="13dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginBottom="5dip"
            android:orientation="horizontal" >
<!-- android:background="#ff1774" -->
            <Button
                android:id="@+id/btDownload"
                android:layout_width="fill_parent"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:background="@drawable/selector_button_ads"
                android:textSize="14dip"
                android:layout_marginRight="3dip"
                android:textColor="@android:color/white"
                android:text="@string/ads_bt_down" />

            <Button
                android:id="@+id/btSkip"
                android:layout_width="fill_parent"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:background="@drawable/selector_button_back_right"
                android:textSize="14dip"
                android:layout_marginLeft="3dip"
                android:textColor="@android:color/white"
                android:text="@string/ads_skip" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>